# bibliaroot

./: .gitignore  LICENSE  README.md  esboço-biblia-linux.md  main.py  pyproject.toml
app/: __init__.py  application.py  constants.py  i18n.py  window.py
app/models/: bible_db.py  favorites.py  settings.py  study.py
app/services/: __init__.py  backend.py  daily_content.py  daily_scheduler.py  language_inference.py
app/views/: __init__.py  favorites_view.py  reader_view.py  search_view.py  settings_view.py
app/widgets/: __init__.py  book_sidebar.py  chapter_panel.py  translation_switcher.py  verse_card.py
data/bibles/: Anderson.sqlite  BeaMRK.sqlite  Est.sqlite  FreGeneve1669.sqlite  FreOltramare1874.sqlite  FreStapfer1889.sqlite  GerLeoNA28.sqlite  Haweis.sqlite  JapDenmo.sqlite  ManxGaelic.sqlite  Peshitta.sqlite  PohnOld.sqlite  SP.sqlite  SloOjacano.sqlite  SloStritar.sqlite  SpaRVG.sqlite  Twenty.sqlite  Tyndale.sqlite  vlsJoNT.sqlite
locale/: bibliaapp.pot
packaging/arch/: PKGBUILD  (+1 more)
scripts/: apply_locale_translations.py  backfill_translation_languages.py  compile_locales.sh  daily_notification.py  export_full_backup.py  fill_untranslated_po.py  import_full_backup.py  import_scrollmapper_crossrefs.py  import_scrollmapper_sqlite.py  install_daily_timer.py  setup_db.py
tests/: helpers.py  test_backend_service.py  test_bible_db.py  test_bible_db_unit.py  test_crossrefs_import.py  test_daily_content.py  test_daily_timer.py  test_favorites.py  test_i18n.py  test_scrollmapper_import.py  test_settings.py  test_setup_db.py  test_study_features.py
(+17 files in other folders)
