[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliaroot-linux"
version = "0.1.0"
description = "App de leitura e estudo biblico para Linux (GTK4/libadwaita)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
